Fix: Atoms/AmountInput preventif white space wrap for currency display, especially in staticdatatable Fix: Organisms/StaticDataTable enabling overflow hidden for footer

--- a/src/assets/_amount.scss
+++ b/src/assets/_amount.scss
@@ -5,6 +5,7 @@
   border: 1px solid $chalk;
   border-radius: 4px;
   padding-right: 8px;
+  white-space: nowrap;
 
   &:hover {
     border: 1px solid $primary;
