--- a/src/assets/_datatable.scss
+++ b/src/assets/_datatable.scss
@@ -122,7 +122,7 @@ table {
 
     &.ellipsis {
       white-space: nowrap;
-      overflow: hidden;
+      overflow-x: hidden;
       text-overflow: ellipsis;
     }
 
@@ -150,5 +150,6 @@ table {
     white-space: normal;
     border-top: 1px solid $silver;
     padding: 6px 12px;
+    text-overflow: ellipsis;
   }
 }
